[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dqar-contracts"
version = "1.1.0"
requires-python = ">=3.9"
description = "DQAR shared interface definitions — schemas, ViewDefinitions, SQL, EXT metadata"
dependencies = [
    "requests",
    "jsonschema>=4.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
dqar-validate = "dqar_contracts.validate:main"

[tool.setuptools.package-data]
"dqar_contracts" = [
    "schemas/*.json",
    "audit_extensions/*.json",
    "viewdefinitions/*.json",
    "sql/measures/*.sql",
    "ol_facets/*.json",
]
"dqar_contracts.measures" = [
    "sql/*/*.json",
]
