[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdar-contracts"
version = "2.0.0"
requires-python = ">=3.9"
description = "CDAR shared interface definitions — schemas, ViewDefinitions, SQL, EXT metadata"
dependencies = [
    "requests",
    "jsonschema>=4.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
cdar-validate = "cdar_contracts.validate:main"

[tool.setuptools.package-data]
"cdar_contracts" = [
    "schemas/*.json",
    "audit_extensions/*.json",
    "viewdefinitions/*.json",
    "sql/measures/*.sql",
    "ol_facets/*.json",
]
"cdar_contracts.measures" = [
    "sql/*/*.json",
]
